<resources>
    <string name="app_name">Lectra</string>
    <string name="detail">Details</string>
    <string name="add_item">Add Item</string>
    <string name="list">Subjects List</string>
    <string name="delete_item">1 item is deleted</string>
    <string name="undo">Undo?</string>
    <string name="transition_name">transition_name</string>
    <string name="transition_button">transition_button</string>
    <string name="total_number_of_hours">Total Number of hours:</string>
    <string name="list_of_lessons">List of lessons:</string>
    <string name="textview">TextView</string>
    <string name="date">Date:</string>
    <string name="hours">Hours:</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="subject">Subject:</string>
    <string name="n_hours">N° hours:</string>
    <string name="insert_number_of_hours_here">Insert number of hours here</string>
    <string name="lectra">LecTra</string>
    <string name="todo">TODO</string>
    <string-array name="subjs_array">
        <item>IGIENE GENERALE ED APPLICATA</item>
        <item>MICROBIOLOGIA CLINICA</item>
        <item>PATOLOGIA GENERALE</item>
        <item>INFERMIERISTICA IN SANITÀ PUBBLICA...</item>
        <item>PSICOLOGIA CLINICA</item>
        <item>PSICOLOGIA GENERALE</item>
        <item>SCIENZE INFERMIERISTICHE GENERALI...</item>
        <item>TIROCINIO I</item>
        <item>TIROCINIO II</item>
        <item>TIROCINIO III</item>
        <item>CARDIOCHIRURGIA</item>
        <item>NEUROCHIRURGIA</item>
        <item>UROLOGIA</item>
        <item>OTORINOLARINGOIATRIA</item>
        <item>MALATTIE DELL’APPARATO VISIVO</item>
        <item>S.I. SPECIALISTICHE IN CHIRURGIA</item>
        <item>ENDOCRINOLOGIA</item>
        <item>GASTROENTEROLOGIA</item>
        <item>MALATTIE DEL SANGUE</item>
        <item>NEFROLOGIA</item>
        <item>REUMATOLOGIA</item>
        <item>ANATOMIA PATOLOGICA</item>
        <item>BIOCHIMICA CLINICA</item>
        <item>IMMUNOLOGIA</item>
        <item>PATOLOGIA CLINICA</item>
        <item>GERIATRIA</item>
        <item>MALATTIE INFETTIVE</item>
        <item>MEDICINA DEL LAVORO</item>
        <item>ONCOLOGIA MEDICA</item>
        <item>EBN</item>
        <item>INFERMIERISTICA COMUNITARIA...</item>
        <item>PEDIATRIA</item>
        <item>GINECOLOGIA E OSTETRICIA</item>
        <item>S.I. OSTETRICO‐GINECOLOGICHE...</item>
        <item>ALLERGOLOGIA E IMMUNOLOGIA</item>
        <item>FARMACOLOGIA</item>
        <item>MEDICINA INTERNA</item>
        <item>CHIRURGIA GENERALE</item>
        <item>INFERMIERISTICA CLINICA IN CHIRURGIA</item>
        <item>RADIOPROTEZIONE</item>
        <item>MEDICNA LEGALE</item>
        <item>DIRITTO DEL LAVORO</item>
        <item>ETICA E DEONTOLOGIA APPLICATA...</item>
        <item>MALATTIE DELL’APPARATO RESPIRATORIO</item>
        <item>MALATTIE DELL’APPARATO CARDIOVASCOLARE</item>
        <item>ANESTESIOLOGIA</item>
        <item>INFERMIERISTICA IN AREA CRITICA..</item>
        <item>NEUROLOGIA</item>
        <item>MALATTIE APPARATO LOCOMOTORE</item>
        <item>PSICHIATRIA</item>
        <item>INFERMIERISTICA NELLA DISABILITÀ</item>
    </string-array>
    <string name="title_activity_loading_activity">LoadingActivity</string>
</resources>
